Added Changes for screens, classes, Added test cases.

--- a/src/main/resources/templates/error.html
+++ b/src/main/resources/templates/error.html
@@ -35,8 +35,6 @@
 
 						<li class="nav-item active"><a class="nav-link" href="/">Home
 						</a></li>
-
-						
 					</ul>
 					<div class="text-end">
 						<button type="button" class="btn btn-outline-light me-2">Login</button>
@@ -55,6 +53,8 @@
 					<h1>Something went wrong!</h1>
 					<h2>Our Engineers are on it</h2>
 					<a href="/" type="button" class="btn btn-primary">Go Home</a>
+					<br/><br/>
+					<br /> © <span th:text="${#dates.year(#dates.createNow())}"></span>All Rights Reserved by Share Books.
 					<!--  Page Contents End -->
 
 				</div>
