--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -95,8 +95,7 @@
 							</div>
 
 							<div class="center dark">
-								<small>Copyrights &copy; All Rights Reserved by Share
-									Books.</small>
+								<small>© <span th:text="${#dates.year(#dates.createNow())}"></span>All Rights Reserved by Share Books.</small>
 							</div>
 
 						</div>
