updated user specific books

--- a/src/main/resources/templates/error.html
+++ b/src/main/resources/templates/error.html
@@ -51,7 +51,7 @@
 
 					<!--  Page Contents -->
 					<h1>Something went wrong!</h1>
-					<h2>Our Engineers are on it</h2>
+					<h2>Our Engineers are on it</h2><br/><br/>
 					<a href="/" type="button" class="btn btn-primary">Go Home</a>
 					<br/><br/>
 					<br /> © <span th:text="${#dates.year(#dates.createNow())}"></span>All Rights Reserved by Share Books.
