--- a/src/main/resources/templates/library.html
+++ b/src/main/resources/templates/library.html
@@ -56,8 +56,8 @@
 
 
 		<div>
-			<div class="bg-light p-5 rounded">
-				<div class="col-sm-8 mx-auto">
+			<div class="bg-light p-12 rounded">
+				<div class="col-sm-11 mx-auto">
 
 					<!--  Page Contents -->
 					<h1>Book Library</h1>
@@ -72,10 +72,11 @@
 
 									<button class="btn btn-primary" id="submit_data">Submit</button>
 									<div class="table-responsive">
-									<table class="table table-hover" id="makeEditable">
+									<table class="table table-hover table-bordered" id="makeEditable">
 										<thead>
 											<tr>
-												<th scope="col">Image</th>
+												<th scope="col">Thumbnail</th>
+												<th scope="col">Image URL</th>
 												<th scope="col">Title</th>
 												<th scope="col">Author</th>
 												<th scope="col">Publisher</th>
@@ -88,6 +89,7 @@
 
 											<tr th:each="book: ${books}">
 												<td><img alt="" th:src="${book.imageUrl}"></td>
+												<td th:text="${book.imageUrl}" />
 												<td th:text="${book.title}" />
 												<td th:text="${book.author}" />
 												<td th:text="${book.publisher}" />
@@ -128,6 +130,7 @@
 		$(function() {
 
 			$('#makeEditable').SetEditable({
+				columnsEd: "1,2,3,4,5,6,7",
 				$addButton : $('#but_add')
 			});
 
